src/main/java/clang/ClangLibrary.java

	/**
	 * \brief Return the cursor for the declaration of the given type.<br>
	 * Original signature : <code>CXCursor clang_getTypeDeclaration(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2731</i>
	 */
	CXCursor.ByValue clang_getTypeDeclaration(clang.CXType.ByValue T);
	/**
	 * Returns the Objective-C type encoding for the specified declaration.<br>
	 * Original signature : <code>CXString clang_getDeclObjCTypeEncoding(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2736</i>
	 */
	CXString.ByValue clang_getDeclObjCTypeEncoding(CXCursor.ByValue C);
	/**
	 * \brief Retrieve the spelling of a given CXTypeKind.<br>
	 * Original signature : <code>CXString clang_getTypeKindSpelling(CXTypeKind)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2741</i>
	 */
	CXString.ByValue clang_getTypeKindSpelling(int K);
	/**
	 * \brief Retrieve the calling convention associated with a function type.<br>
	 * * If a non-function type is passed in, CXCallingConv_Invalid is returned.<br>
	 * Original signature : <code>CXCallingConv clang_getFunctionTypeCallingConv(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2748</i>
	 */
	int clang_getFunctionTypeCallingConv(clang.CXType.ByValue T);
	/**
	 * \brief Retrieve the result type associated with a function type.<br>
	 * * If a non-function type is passed in, an invalid type is returned.<br>
	 * Original signature : <code>CXType clang_getResultType(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2755</i>
	 */
	clang.CXType.ByValue clang_getResultType(clang.CXType.ByValue T);
	/**
	 * \brief Retrieve the number of non-variadic arguments associated with a<br>
	 * function type.<br>
	 * * If a non-function type is passed in, -1 is returned.<br>
	 * Original signature : <code>int clang_getNumArgTypes(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2763</i>
	 */
	int clang_getNumArgTypes(clang.CXType.ByValue T);
	/**
	 * \brief Retrieve the type of an argument of a function type.<br>
	 * * If a non-function type is passed in or the function does not have enough<br>
	 * parameters, an invalid type is returned.<br>
	 * Original signature : <code>CXType clang_getArgType(CXType, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2771</i>
	 */
	clang.CXType.ByValue clang_getArgType(clang.CXType.ByValue T, int i);
	/**
	 * \brief Return 1 if the CXType is a variadic function type, and 0 otherwise.<br>
	 * Original signature : <code>int clang_isFunctionTypeVariadic(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2776</i>
	 */
	int clang_isFunctionTypeVariadic(clang.CXType.ByValue T);
	/**
	 * \brief Retrieve the result type associated with a given cursor.<br>
	 * * This only returns a valid type if the cursor refers to a function or method.<br>
	 * Original signature : <code>CXType clang_getCursorResultType(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2783</i>
	 */
	clang.CXType.ByValue clang_getCursorResultType(CXCursor.ByValue C);
	/**
	 * \brief Return 1 if the CXType is a POD (plain old data) type, and 0<br>
	 *  otherwise.<br>
	 * Original signature : <code>int clang_isPODType(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2789</i>
	 */
	int clang_isPODType(clang.CXType.ByValue T);
	/**
	 * \brief Return the element type of an array, complex, or vector type.<br>
	 * * If a type is passed in that is not an array, complex, or vector type,<br>
	 * an invalid type is returned.<br>
	 * Original signature : <code>CXType clang_getElementType(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2797</i>
	 */
	clang.CXType.ByValue clang_getElementType(clang.CXType.ByValue T);
	/**
	 * \brief Return the number of elements of an array or vector type.<br>
	 * * If a type is passed in that is not an array or vector type,<br>
	 * -1 is returned.<br>
	 * Original signature : <code>long long clang_getNumElements(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2805</i>
	 */
	long clang_getNumElements(clang.CXType.ByValue T);
	/**
	 * \brief Return the element type of an array type.<br>
	 * * If a non-array type is passed in, an invalid type is returned.<br>
	 * Original signature : <code>CXType clang_getArrayElementType(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2812</i>
	 */
	clang.CXType.ByValue clang_getArrayElementType(clang.CXType.ByValue T);
	/**
	 * \brief Return the array size of a constant array.<br>
	 * * If a non-array type is passed in, -1 is returned.<br>
	 * Original signature : <code>long long clang_getArraySize(CXType)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2819</i>
	 */
	long clang_getArraySize(clang.CXType.ByValue T);
	/**
	 * \brief Returns 1 if the base class specified by the cursor with kind<br>
	 *   CX_CXXBaseSpecifier is virtual.<br>
	 * Original signature : <code>int clang_isVirtualBase(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2825</i>
	 */
	int clang_isVirtualBase(CXCursor.ByValue CXCursor1);
	/**
	 * \brief Returns the access control level for the C++ base specifier<br>
	 * represented by a cursor with kind CXCursor_CXXBaseSpecifier or<br>
	 * CXCursor_AccessSpecifier.<br>
	 * Original signature : <code>CX_CXXAccessSpecifier clang_getCXXAccessSpecifier(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2843</i>
	 */
	int clang_getCXXAccessSpecifier(CXCursor.ByValue CXCursor1);
	/**
	 * \brief Determine the number of overloaded declarations referenced by a <br>
	 * \c CXCursor_OverloadedDeclRef cursor.<br>
	 * * \param cursor The cursor whose overloaded declarations are being queried.<br>
	 * * \returns The number of overloaded declarations referenced by \c cursor. If it<br>
	 * is not a \c CXCursor_OverloadedDeclRef cursor, returns 0.<br>
	 * Original signature : <code>int clang_getNumOverloadedDecls(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2854</i>
	 */
	int clang_getNumOverloadedDecls(CXCursor.ByValue cursor);
	/**
	 * \brief Retrieve a cursor for one of the overloaded declarations referenced<br>
	 * by a \c CXCursor_OverloadedDeclRef cursor.<br>
	 * * \param cursor The cursor whose overloaded declarations are being queried.<br>
	 * * \param index The zero-based index into the set of overloaded declarations in<br>
	 * the cursor.<br>
	 * * \returns A cursor representing the declaration referenced by the given <br>
	 * \c cursor at the specified \c index. If the cursor does not have an <br>
	 * associated set of overloaded declarations, or if the index is out of bounds,<br>
	 * returns \c clang_getNullCursor();<br>
	 * Original signature : <code>CXCursor clang_getOverloadedDecl(CXCursor, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2870</i>
	 */
	CXCursor.ByValue clang_getOverloadedDecl(CXCursor.ByValue cursor, int index);
	/**
	 * \brief For cursors representing an iboutletcollection attribute,<br>
	 *  this function returns the collection element type.<br>
	 * Original signature : <code>CXType clang_getIBOutletCollectionType(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2889</i>
	 */
	clang.CXType.ByValue clang_getIBOutletCollectionType(CXCursor.ByValue CXCursor1);
	/**
	 * \brief Visit the children of a particular cursor.<br>
	 * * This function visits all the direct children of the given cursor,<br>
	 * invoking the given \p visitor function with the cursors of each<br>
	 * visited child. The traversal may be recursive, if the visitor returns<br>
	 * \c CXChildVisit_Recurse. The traversal may also be ended prematurely, if<br>
	 * the visitor returns \c CXChildVisit_Break.<br>
	 * * \param parent the cursor whose child may be visited. All kinds of<br>
	 * cursors can be visited, including invalid cursors (which, by<br>
	 * definition, have no children).<br>
	 * * \param visitor the visitor function that will be invoked for each<br>
	 * child of \p parent.<br>
	 * * \param client_data pointer data supplied by the client, which will<br>
	 * be passed to the visitor each time it is invoked.<br>
	 * * \returns a non-zero value if the traversal was terminated<br>
	 * prematurely by the visitor returning \c CXChildVisit_Break.<br>
	 * Original signature : <code>int clang_visitChildren(CXCursor, CXCursorVisitor, CXClientData)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:2966</i>
	 */
	int clang_visitChildren(CXCursor.ByValue parent, ClangLibrary.CXCursorVisitor visitor, Pointer client_data);
	/**
	 * \brief Retrieve a Unified Symbol Resolution (USR) for the entity referenced<br>
	 * by the given cursor.<br>
	 * * A Unified Symbol Resolution (USR) is a string that identifies a particular<br>
	 * entity (function, class, variable, etc.) within a program. USRs can be<br>
	 * compared across translation units to determine, e.g., when references in<br>
	 * one translation refer to an entity defined in another translation unit.<br>
	 * Original signature : <code>CXString clang_getCursorUSR(CXCursor)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:3017</i>
	 */
	CXString.ByValue clang_getCursorUSR(CXCursor.ByValue CXCursor1);
	/**
	 * \brief Construct a USR for a specified Objective-C class.<br>
	 * Original signature : <code>CXString clang_constructUSR_ObjCClass(const char*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:3022</i><br>
	 * @deprecated use the safer methods {@link #clang_constructUSR_ObjCClass(java.lang.String)} and {@link #clang_constructUSR_ObjCClass(com.sun.jna.Pointer)} instead
	 */
	@Deprecated
	CXString.ByValue clang_constructUSR_ObjCClass(Pointer class_name);
	/**
	 * \brief Construct a USR for a specified Objective-C class.<br>
	 * Original signature : <code>CXString clang_constructUSR_ObjCClass(const char*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:3022</i>
	 */
	CXString.ByValue clang_constructUSR_ObjCClass(String class_name);
	/**
	 * \brief Construct a USR for a specified Objective-C category.<br>
	 * Original signature : <code>CXString clang_constructUSR_ObjCCategory(const char*, const char*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:3027</i><br>
	 * @deprecated use the safer methods {@link #clang_constructUSR_ObjCCategory(java.lang.String, java.lang.String)} and {@link #clang_constructUSR_ObjCCategory(com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated
	CXString.ByValue clang_constructUSR_ObjCCategory(Pointer class_name, Pointer category_name);
	/**
	 * \brief Construct a USR for a specified Objective-C category.<br>
	 * Original signature : <code>CXString clang_constructUSR_ObjCCategory(const char*, const char*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:3027</i>
	 */
	CXString.ByValue clang_constructUSR_ObjCCategory(String class_name, String category_name);
	/**
	 * \brief Construct a USR for a specified Objective-C protocol.<br>
	 * Original signature : <code>CXString clang_constructUSR_ObjCProtocol(const char*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:3034</i><br>
	 * @deprecated use the safer methods {@link #clang_constructUSR_ObjCProtocol(java.lang.String)} and {@link #clang_constructUSR_ObjCProtocol(com.sun.jna.Pointer)} instead
	 */
	@Deprecated
	CXString.ByValue clang_constructUSR_ObjCProtocol(Pointer protocol_name);
	/**
	 * \brief Construct a USR for a specified Objective-C protocol.<br>
	 * Original signature : <code>CXString clang_constructUSR_ObjCProtocol(const char*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:3034</i>
	 */
	CXString.ByValue clang_constructUSR_ObjCProtocol(String protocol_name);
